portal.css
body {
    font-family: 'Raleway', sans-serif;
    margin: 0;
    -webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none; /* Safari */
    -khtml-user-select: none; /* Konqueror HTML */
    -moz-user-select: none; /* Old versions of Firefox */
    -ms-user-select: none; /* Internet Explorer/Edge */
    user-select: none; /* Non-prefixed version, currently  supported by Chrome, Opera and Firefox */
}

#headerContainer {
    margin: 0;
    background-color: #637DFF;
    padding: 50px;
}

header {
    color: white;
    text-align: center;
    font-size: 55px;
    font-weight: bolder;
}

#ulNav {
    list-style-type: none; /* Removes bullet points */
    margin: 0; /* Removes default settings */
    padding: 0;
    background-color: #637DFF;
    overflow: hidden; /* This makes the nav bar background colour go across the page */
}

.liNav {
    position: relative;
    color: grey;
    float: left; /* Displays the list items on one line removing its default block status*/
    text-align: center;
    left: 10%;
}

.navLink {
    display: block;
    padding: 25px 0px ;
    width: 100%;
    text-decoration: none;
    color: white;
    font-size: 30px;
    margin: 0px 40px ;
}

.navLink:hover {
    background-color: rgb(0, 42, 255);
    border-radius: 4px;
}

#fullContainer {
    width: 70vw;
    padding: 50px;
    padding-top: 40px;
    align-items: center;
    margin: 20px 160px;
}

h1 {
    font-size: 30px;
    text-align: justify;
}

#skillsContainer {
    display: grid;
    grid-template-columns: repeat(2, minmax(400px, auto));
    grid-auto-rows: minmax(150px, auto);
    justify-content: center;
    align-items: stretch;
    justify-items: center;
    grid-column-gap: 0;
    grid-row-gap: 30px;
    background-color: #637DFF;
    overflow: visible;
    /* padding-bottom: 60px; */
    border-radius: 4px;
}

.divSkill {
    margin: 15px;
    cursor: pointer;
    padding: 20px;
}

.skillsPara {
    height: 240px;
    /* padding-bottom: 60px; */
    margin-top: 0;
    font-size: 20px;
}

h3 {
    margin-bottom: 5px;
    border-bottom: 2px solid black;
    font-size: 24px;  
}

h2 {
    margin-top: 45px;
    color: #637DFF;
    border-bottom: 2px solid #637DFF;
    font-size: 30px;
}

p {
    font-size: 22px;
    padding: 10px;
}

/* Carousel CSS  for languages*/
#langWrapper {
    display: flex;
    justify-content: center;
    align-items: center;
}

.carouselContainer {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 700px;
}

.carouselTrack {
    width: 400px;
    height: 150px;
    padding: 0;
    list-style: none;
    margin: 0 30px 10px;
    position: relative;
}

.carouselSlide {
    display: flex;
    flex-direction: row;
    width: 100%;
    justify-content: space-evenly;
    align-items: center;
    height: 125px;
    position: absolute;
    background-color: rgb(221, 220, 220);
    left: -1000px;
}

.currentCarouselSlide {
    left: 0px;
    margin: 5px;
    top: 20px;
    border-radius: 4px;
}

.carouselNav {
    text-align: center;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 15px;
}

.carouselNavCircles {
    height: 20px;
    width: 20px;
    background-color: lightgrey;
    border-radius: 50%;
    outline: none;   
    border: none;
    margin-left: 12px;
}

.currentSlideCircle {
    background-color: rgb(114, 113, 113);
}

.carouselNavCircles:hover {
    background-color: rgb(114, 113, 113);
    cursor: pointer;
}

.carouselButton {
    border: none;
    font-size: 50px;
    color: grey;
    outline: none;
    background-color: none;
}

.carouselButton:hover {
    color: rgb(65, 65, 65);
    cursor: pointer;
    transform: scale(1.2);
}

/* CSS for the icons */
.fa-js-square {
    color: yellow;
    opacity: 0.7;
}

.fa-html5 {
    color: orange;
    opacity: 0.7;
}

.fa-css3-alt {
    color: blue;
    opacity: 0.7;
}

/* CSS for the projects section */

#gitHub {
    color: #637DFF;
    text-decoration: none;
}

#gitHub:hover {
    color: rgb(0, 42, 255);
    text-decoration: underline;

}

